--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,14 @@
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
+		    <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <configuration>
+    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+  </configuration>
+</plugin>
+		    <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.6.1</version>
@@ -56,6 +63,15 @@
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>${checkstyle.version}</version>
                 </plugin>
+  
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>3.3.1</version>
+  <!-- Any additional configuration -->
+</plugin>  
+  
+  
             </plugins>
         </pluginManagement>
     </build>
@@ -87,6 +103,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
-        </plugins>
+    </plugins>
     </reporting>
 </project>
